// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataClassDesigner custom properties 1`] = `
<BaseDomainDesigner
  domains={
    Immutable.List [
      Immutable.Record {
        "name": undefined,
        "container": undefined,
        "description": undefined,
        "domainURI": undefined,
        "domainId": null,
        "allowFileLinkProperties": false,
        "allowAttachmentProperties": false,
        "allowFlagProperties": true,
        "allowSampleSubjectProperties": true,
        "allowTextChoiceProperties": true,
        "allowTimepointProperties": false,
        "allowUserProperties": true,
        "showDefaultValueSettings": false,
        "defaultDefaultValueType": undefined,
        "defaultValueOptions": Immutable.List [],
        "fields": Immutable.List [],
        "indices": Immutable.List [],
        "domainException": undefined,
        "mandatoryFieldNames": Immutable.List [],
        "reservedFieldNames": Immutable.List [],
        "newDesignFields": undefined,
        "instructions": undefined,
        "domainKindName": undefined,
        "schemaName": undefined,
        "queryName": undefined,
        "disabledSystemFields": undefined,
      },
    ]
  }
  hasValidProperties={false}
  onCancel={[MockFunction]}
  onFinish={[Function]}
  saveBtnText="Finish it up"
  submitting={false}
  successBsStyle="primary"
  visitedPanels={Immutable.List []}
>
  <ComponentWithDomainPropertiesPanelCollapse
    appPropertiesOnly={true}
    controlledCollapse={true}
    headerText="header text test"
    initCollapsed={false}
    model={
      DataClassModel {
        "domain": Immutable.Record {
          "name": undefined,
          "container": undefined,
          "description": undefined,
          "domainURI": undefined,
          "domainId": null,
          "allowFileLinkProperties": false,
          "allowAttachmentProperties": false,
          "allowFlagProperties": true,
          "allowSampleSubjectProperties": true,
          "allowTextChoiceProperties": true,
          "allowTimepointProperties": false,
          "allowUserProperties": true,
          "showDefaultValueSettings": false,
          "defaultDefaultValueType": undefined,
          "defaultValueOptions": Immutable.List [],
          "fields": Immutable.List [],
          "indices": Immutable.List [],
          "domainException": undefined,
          "mandatoryFieldNames": Immutable.List [],
          "reservedFieldNames": Immutable.List [],
          "newDesignFields": undefined,
          "instructions": undefined,
          "domainKindName": undefined,
          "schemaName": undefined,
          "queryName": undefined,
          "disabledSystemFields": undefined,
        },
        "importAliases": Immutable.Map {},
        "systemFields": [
          {
            "DataType": "Text",
            "Description": "Contains a short name for this data object",
            "Disableble": false,
            "Label": "Name",
            "Name": "Name",
            "Required": true,
          },
          {
            "DataType": "Text",
            "Description": "Contains a description for this data object",
            "Disableble": true,
            "Label": "Description",
            "Name": "Description",
            "Required": false,
          },
        ],
        Symbol(immer-draftable): true,
      }
    }
    nameExpressionInfoUrl="https://www.labkey.org/Documentation"
    nameExpressionPlaceholder="name expression placeholder test"
    namePreviewsLoading={false}
    nounPlural="Sources"
    nounSingular="Source"
    onAddParentAlias={[Function]}
    onChange={[Function]}
    onNameFieldHover={[Function]}
    onParentAliasChange={[Function]}
    onRemoveParentAlias={[Function]}
    onToggle={[Function]}
    panelStatus="NONE"
    parentAliasHelpText="Column headings used during import to set a source's parentage."
    updateDupeParentAliases={[Function]}
    useTheme={true}
    validate={true}
  />
  <DomainForm
    api={
      {
        "fetchDomainDetails": [MockFunction],
        "fetchOntologies": [MockFunction],
        "getDataClassDetails": [MockFunction],
        "getDomainNamePreviews": [MockFunction],
        "getGenId": [MockFunction],
        "getMaxPhiLevel": [Function],
        "hasExistingDomainData": [MockFunction],
        "saveDomain": [MockFunction],
        "setGenId": [MockFunction],
        "validateDomainNameExpressions": [MockFunction],
      }
    }
    appPropertiesOnly={true}
    controlledCollapse={true}
    domain={
      Immutable.Record {
        "name": undefined,
        "container": undefined,
        "description": undefined,
        "domainURI": undefined,
        "domainId": null,
        "allowFileLinkProperties": false,
        "allowAttachmentProperties": false,
        "allowFlagProperties": true,
        "allowSampleSubjectProperties": true,
        "allowTextChoiceProperties": true,
        "allowTimepointProperties": false,
        "allowUserProperties": true,
        "showDefaultValueSettings": false,
        "defaultDefaultValueType": undefined,
        "defaultValueOptions": Immutable.List [],
        "fields": Immutable.List [],
        "indices": Immutable.List [],
        "domainException": undefined,
        "mandatoryFieldNames": Immutable.List [],
        "reservedFieldNames": Immutable.List [],
        "newDesignFields": undefined,
        "instructions": undefined,
        "domainKindName": undefined,
        "schemaName": undefined,
        "queryName": undefined,
        "disabledSystemFields": undefined,
      }
    }
    domainFormDisplayOptions={
      {
        "disableMvEnabled": false,
        "domainKindDisplayName": "data class",
        "hideAddFieldsButton": false,
        "hideConditionalFormatting": false,
        "hideFilePropertyType": false,
        "hideImportData": false,
        "hideImportExport": false,
        "hideRequired": false,
        "hideStudyPropertyTypes": false,
        "hideTextOptions": false,
        "hideValidators": false,
        "isDragDisabled": false,
        "phiLevelDisabled": false,
      }
    }
    domainIndex={0}
    headerTitle="Fields"
    helpTopic={null}
    initCollapsed={true}
    key="0"
    onChange={[Function]}
    onToggle={[Function]}
    panelStatus="TODO"
    successBsStyle="primary"
    systemFields={
      [
        {
          "DataType": "Text",
          "Description": "Contains a short name for this data object",
          "Disableble": false,
          "Label": "Name",
          "Name": "Name",
          "Required": true,
        },
        {
          "DataType": "Text",
          "Description": "Contains a description for this data object",
          "Disableble": true,
          "Label": "Description",
          "Name": "Description",
          "Required": false,
        },
      ]
    }
    testMode={true}
    useTheme={true}
    validate={false}
  />
  <ComponentWithDomainPropertiesPanelCollapse
    controlledCollapse={true}
    entityDataType={
      {
        "ancestorColumnName": "Ancestors/OtherData",
        "deleteHelpLinkTopic": "dataClass#prevent",
        "dependencyText": "derived data or sample dependencies",
        "descriptionPlural": "parent types",
        "descriptionSingular": "parent type",
        "filterCardHeaderClass": "filter-card__header-primary",
        "importFileAction": "importData",
        "inputColumnName": "Inputs/Data/First",
        "inputTypeValueField": "rowId",
        "insertColumnNamePrefix": "DataInputs/",
        "instanceSchemaName": "exp.data",
        "listingSchemaQuery": SchemaQuery {
          "queryName": "Data",
          "schemaName": "exp",
          "viewName": undefined,
        },
        "moveActionName": "moveSources.api",
        "moveControllerName": "experiment",
        "nounAsParentPlural": "Data Types",
        "nounAsParentSingular": "Parent",
        "nounPlural": "sources",
        "nounSingular": "source",
        "operationConfirmationActionName": "getDataOperationConfirmationData.api",
        "operationConfirmationControllerName": "experiment",
        "projectConfigurableDataType": "DataClass",
        "sampleFinderCardType": "dataclassparent",
        "typeIcon": "source_type",
        "typeListingSchemaQuery": SchemaQuery {
          "queryName": "DataClasses",
          "schemaName": "exp",
          "viewName": undefined,
        },
        "typeNounAsParentSingular": "Data Type",
        "typeNounSingular": "Data Type",
        "uniqueFieldKey": "Name",
      }
    }
    initCollapsed={true}
    onToggle={[Function]}
    onUpdateExcludedProjects={[Function]}
  />
  <NameExpressionValidationModal
    onConfirm={[Function]}
    onHide={[Function]}
    show={false}
  />
</BaseDomainDesigner>
`;

exports[`DataClassDesigner default properties 1`] = `
<BaseDomainDesigner
  domains={
    Immutable.List [
      Immutable.Record {
        "name": undefined,
        "container": undefined,
        "description": undefined,
        "domainURI": undefined,
        "domainId": null,
        "allowFileLinkProperties": false,
        "allowAttachmentProperties": false,
        "allowFlagProperties": true,
        "allowSampleSubjectProperties": true,
        "allowTextChoiceProperties": true,
        "allowTimepointProperties": false,
        "allowUserProperties": true,
        "showDefaultValueSettings": false,
        "defaultDefaultValueType": undefined,
        "defaultValueOptions": Immutable.List [],
        "fields": Immutable.List [],
        "indices": Immutable.List [],
        "domainException": undefined,
        "mandatoryFieldNames": Immutable.List [],
        "reservedFieldNames": Immutable.List [],
        "newDesignFields": undefined,
        "instructions": undefined,
        "domainKindName": undefined,
        "schemaName": undefined,
        "queryName": undefined,
        "disabledSystemFields": undefined,
      },
    ]
  }
  hasValidProperties={false}
  onCancel={[MockFunction]}
  onFinish={[Function]}
  saveBtnText="Save"
  submitting={false}
  visitedPanels={Immutable.List []}
>
  <ComponentWithDomainPropertiesPanelCollapse
    controlledCollapse={true}
    initCollapsed={false}
    model={
      DataClassModel {
        "domain": Immutable.Record {
          "name": undefined,
          "container": undefined,
          "description": undefined,
          "domainURI": undefined,
          "domainId": null,
          "allowFileLinkProperties": false,
          "allowAttachmentProperties": false,
          "allowFlagProperties": true,
          "allowSampleSubjectProperties": true,
          "allowTextChoiceProperties": true,
          "allowTimepointProperties": false,
          "allowUserProperties": true,
          "showDefaultValueSettings": false,
          "defaultDefaultValueType": undefined,
          "defaultValueOptions": Immutable.List [],
          "fields": Immutable.List [],
          "indices": Immutable.List [],
          "domainException": undefined,
          "mandatoryFieldNames": Immutable.List [],
          "reservedFieldNames": Immutable.List [],
          "newDesignFields": undefined,
          "instructions": undefined,
          "domainKindName": undefined,
          "schemaName": undefined,
          "queryName": undefined,
          "disabledSystemFields": undefined,
        },
        "importAliases": Immutable.Map {},
        "systemFields": [
          {
            "DataType": "Text",
            "Description": "Contains a short name for this data object",
            "Disableble": false,
            "Label": "Name",
            "Name": "Name",
            "Required": true,
          },
          {
            "DataType": "Text",
            "Description": "Contains a description for this data object",
            "Disableble": true,
            "Label": "Description",
            "Name": "Description",
            "Required": false,
          },
        ],
        Symbol(immer-draftable): true,
      }
    }
    namePreviewsLoading={false}
    nounPlural="Data Classes"
    nounSingular="Data Class"
    onAddParentAlias={[Function]}
    onChange={[Function]}
    onNameFieldHover={[Function]}
    onParentAliasChange={[Function]}
    onRemoveParentAlias={[Function]}
    onToggle={[Function]}
    panelStatus="NONE"
    parentAliasHelpText="Column headings used during import to set a data class's parentage."
    updateDupeParentAliases={[Function]}
    validate={true}
  />
  <DomainForm
    api={
      {
        "fetchDomainDetails": [MockFunction],
        "fetchOntologies": [MockFunction],
        "getDataClassDetails": [MockFunction],
        "getDomainNamePreviews": [MockFunction],
        "getGenId": [MockFunction],
        "getMaxPhiLevel": [Function],
        "hasExistingDomainData": [MockFunction],
        "saveDomain": [MockFunction],
        "setGenId": [MockFunction],
        "validateDomainNameExpressions": [MockFunction],
      }
    }
    controlledCollapse={true}
    domain={
      Immutable.Record {
        "name": undefined,
        "container": undefined,
        "description": undefined,
        "domainURI": undefined,
        "domainId": null,
        "allowFileLinkProperties": false,
        "allowAttachmentProperties": false,
        "allowFlagProperties": true,
        "allowSampleSubjectProperties": true,
        "allowTextChoiceProperties": true,
        "allowTimepointProperties": false,
        "allowUserProperties": true,
        "showDefaultValueSettings": false,
        "defaultDefaultValueType": undefined,
        "defaultValueOptions": Immutable.List [],
        "fields": Immutable.List [],
        "indices": Immutable.List [],
        "domainException": undefined,
        "mandatoryFieldNames": Immutable.List [],
        "reservedFieldNames": Immutable.List [],
        "newDesignFields": undefined,
        "instructions": undefined,
        "domainKindName": undefined,
        "schemaName": undefined,
        "queryName": undefined,
        "disabledSystemFields": undefined,
      }
    }
    domainFormDisplayOptions={
      {
        "disableMvEnabled": false,
        "domainKindDisplayName": "data class",
        "hideAddFieldsButton": false,
        "hideConditionalFormatting": false,
        "hideFilePropertyType": false,
        "hideImportData": false,
        "hideImportExport": false,
        "hideRequired": false,
        "hideStudyPropertyTypes": false,
        "hideTextOptions": false,
        "hideValidators": false,
        "isDragDisabled": false,
        "phiLevelDisabled": false,
      }
    }
    domainIndex={0}
    headerTitle="Fields"
    helpTopic={null}
    initCollapsed={true}
    key="0"
    onChange={[Function]}
    onToggle={[Function]}
    panelStatus="TODO"
    systemFields={
      [
        {
          "DataType": "Text",
          "Description": "Contains a short name for this data object",
          "Disableble": false,
          "Label": "Name",
          "Name": "Name",
          "Required": true,
        },
        {
          "DataType": "Text",
          "Description": "Contains a description for this data object",
          "Disableble": true,
          "Label": "Description",
          "Name": "Description",
          "Required": false,
        },
      ]
    }
    testMode={true}
    validate={false}
  />
  <NameExpressionValidationModal
    onConfirm={[Function]}
    onHide={[Function]}
    show={false}
  />
</BaseDomainDesigner>
`;

exports[`DataClassDesigner initModel 1`] = `
<BaseDomainDesigner
  domains={
    Immutable.List [
      Immutable.Record {
        "name": "test1",
        "container": "3E40EE5E-91B7-1036-BF18-F5B7057C168C",
        "description": null,
        "domainURI": "urn:lsid:labkey.com:DataClass.Folder-5398:test1",
        "domainId": 58021,
        "allowFileLinkProperties": false,
        "allowAttachmentProperties": true,
        "allowFlagProperties": true,
        "allowSampleSubjectProperties": true,
        "allowTextChoiceProperties": true,
        "allowTimepointProperties": false,
        "allowUserProperties": true,
        "showDefaultValueSettings": false,
        "defaultDefaultValueType": "FIXED_EDITABLE",
        "defaultValueOptions": Immutable.List [
          "FIXED_EDITABLE",
          "LAST_ENTERED",
        ],
        "fields": Immutable.List [
          Immutable.Record {
            "conceptURI": null,
            "conditionalFormats": Immutable.List [],
            "defaultScale": "LINEAR",
            "defaultValueType": null,
            "defaultValue": null,
            "defaultDisplayValue": "[none]",
            "description": null,
            "dimension": false,
            "excludeFromShifting": false,
            "format": null,
            "hidden": false,
            "importAliases": null,
            "label": null,
            "lookupContainer": undefined,
            "lookupQuery": undefined,
            "lookupSchema": undefined,
            "lookupValidator": undefined,
            "lookupIsValid": undefined,
            "measure": false,
            "mvEnabled": false,
            "name": "TextField",
            "PHI": "NotPHI",
            "propertyId": 518195,
            "propertyURI": "urn:lsid:labkey.com:DataClass.Folder-5398:test1#Field1",
            "propertyValidators": [
              {
                "description": null,
                "errorMessage": null,
                "expression": "~lte=4000",
                "name": "Text Length",
                "new": true,
                "properties": {},
                "rowId": 261363,
                "type": "Length",
              },
            ],
            "rangeValidators": Immutable.List [],
            "rangeURI": "http://www.w3.org/2001/XMLSchema#string",
            "regexValidators": Immutable.List [],
            "textChoiceValidator": undefined,
            "recommendedVariable": false,
            "required": true,
            "scale": 4000,
            "URL": null,
            "shownInDetailsView": true,
            "shownInInsertView": true,
            "shownInUpdateView": true,
            "visible": true,
            "dataType": Immutable.Record {
              "conceptURI": undefined,
              "display": "Text",
              "name": "string",
              "rangeURI": "http://www.w3.org/2001/XMLSchema#string",
              "alternateRangeURI": "xsd:string",
              "shortDisplay": "String",
              "lookupSchema": undefined,
              "lookupQuery": undefined,
            },
            "lookupQueryValue": undefined,
            "lookupType": Immutable.Record {
              "conceptURI": undefined,
              "display": "Lookup",
              "name": "lookup",
              "rangeURI": "http://www.w3.org/2001/XMLSchema#string",
              "alternateRangeURI": undefined,
              "shortDisplay": undefined,
              "lookupSchema": undefined,
              "lookupQuery": undefined,
            },
            "original": {
              "conceptURI": null,
              "dataType": Immutable.Record {
                "conceptURI": undefined,
                "display": "Text",
                "name": "string",
                "rangeURI": "http://www.w3.org/2001/XMLSchema#string",
                "alternateRangeURI": "xsd:string",
                "shortDisplay": "String",
                "lookupSchema": undefined,
                "lookupQuery": undefined,
              },
              "name": "TextField",
              "rangeURI": "http://www.w3.org/2001/XMLSchema#string",
            },
            "updatedField": false,
            "isPrimaryKey": false,
            "lockType": "NotLocked",
            "wrappedColumnName": undefined,
            "disablePhiLevel": false,
            "lockExistingField": false,
            "sourceOntology": undefined,
            "conceptSubtree": undefined,
            "conceptLabelColumn": undefined,
            "conceptImportColumn": undefined,
            "principalConceptCode": undefined,
            "derivationDataScope": undefined,
            "selected": false,
            "scannable": false,
          },
          Immutable.Record {
            "conceptURI": null,
            "conditionalFormats": Immutable.List [],
            "defaultScale": "LINEAR",
            "defaultValueType": "FIXED_EDITABLE",
            "defaultValue": null,
            "defaultDisplayValue": "[none]",
            "description": null,
            "dimension": false,
            "excludeFromShifting": false,
            "format": null,
            "hidden": false,
            "importAliases": null,
            "label": null,
            "lookupContainer": undefined,
            "lookupQuery": undefined,
            "lookupSchema": undefined,
            "lookupValidator": undefined,
            "lookupIsValid": undefined,
            "measure": true,
            "mvEnabled": false,
            "name": "IntField",
            "PHI": "NotPHI",
            "propertyId": 521044,
            "propertyURI": "urn:lsid:labkey.com:DataClass.Folder-5398:test1#IntField",
            "propertyValidators": [],
            "rangeValidators": Immutable.List [],
            "rangeURI": "http://www.w3.org/2001/XMLSchema#int",
            "regexValidators": Immutable.List [],
            "textChoiceValidator": undefined,
            "recommendedVariable": false,
            "required": false,
            "scale": 4000,
            "URL": null,
            "shownInDetailsView": true,
            "shownInInsertView": true,
            "shownInUpdateView": true,
            "visible": true,
            "dataType": Immutable.Record {
              "conceptURI": undefined,
              "display": "Integer",
              "name": "int",
              "rangeURI": "http://www.w3.org/2001/XMLSchema#int",
              "alternateRangeURI": "xsd:int",
              "shortDisplay": undefined,
              "lookupSchema": undefined,
              "lookupQuery": undefined,
            },
            "lookupQueryValue": undefined,
            "lookupType": Immutable.Record {
              "conceptURI": undefined,
              "display": "Lookup",
              "name": "lookup",
              "rangeURI": "http://www.w3.org/2001/XMLSchema#int",
              "alternateRangeURI": undefined,
              "shortDisplay": undefined,
              "lookupSchema": undefined,
              "lookupQuery": undefined,
            },
            "original": {
              "conceptURI": null,
              "dataType": Immutable.Record {
                "conceptURI": undefined,
                "display": "Integer",
                "name": "int",
                "rangeURI": "http://www.w3.org/2001/XMLSchema#int",
                "alternateRangeURI": "xsd:int",
                "shortDisplay": undefined,
                "lookupSchema": undefined,
                "lookupQuery": undefined,
              },
              "name": "IntField",
              "rangeURI": "http://www.w3.org/2001/XMLSchema#int",
            },
            "updatedField": false,
            "isPrimaryKey": false,
            "lockType": "NotLocked",
            "wrappedColumnName": undefined,
            "disablePhiLevel": false,
            "lockExistingField": false,
            "sourceOntology": undefined,
            "conceptSubtree": undefined,
            "conceptLabelColumn": undefined,
            "conceptImportColumn": undefined,
            "principalConceptCode": undefined,
            "derivationDataScope": undefined,
            "selected": false,
            "scannable": false,
          },
          Immutable.Record {
            "conceptURI": null,
            "conditionalFormats": Immutable.List [],
            "defaultScale": "LINEAR",
            "defaultValueType": "FIXED_EDITABLE",
            "defaultValue": null,
            "defaultDisplayValue": "[none]",
            "description": null,
            "dimension": false,
            "excludeFromShifting": false,
            "format": null,
            "hidden": false,
            "importAliases": null,
            "label": null,
            "lookupContainer": undefined,
            "lookupQuery": undefined,
            "lookupSchema": undefined,
            "lookupValidator": undefined,
            "lookupIsValid": undefined,
            "measure": false,
            "mvEnabled": false,
            "name": "DateField",
            "PHI": "NotPHI",
            "propertyId": 521045,
            "propertyURI": "urn:lsid:labkey.com:DataClass.Folder-5398:test1#DateField",
            "propertyValidators": [],
            "rangeValidators": Immutable.List [],
            "rangeURI": "http://www.w3.org/2001/XMLSchema#dateTime",
            "regexValidators": Immutable.List [],
            "textChoiceValidator": undefined,
            "recommendedVariable": false,
            "required": false,
            "scale": 4000,
            "URL": null,
            "shownInDetailsView": true,
            "shownInInsertView": true,
            "shownInUpdateView": true,
            "visible": true,
            "dataType": Immutable.Record {
              "conceptURI": undefined,
              "display": "Date Time",
              "name": "dateTime",
              "rangeURI": "http://www.w3.org/2001/XMLSchema#dateTime",
              "alternateRangeURI": "xsd:dateTime",
              "shortDisplay": undefined,
              "lookupSchema": undefined,
              "lookupQuery": undefined,
            },
            "lookupQueryValue": undefined,
            "lookupType": Immutable.Record {
              "conceptURI": undefined,
              "display": "Lookup",
              "name": "lookup",
              "rangeURI": "http://www.w3.org/2001/XMLSchema#dateTime",
              "alternateRangeURI": undefined,
              "shortDisplay": undefined,
              "lookupSchema": undefined,
              "lookupQuery": undefined,
            },
            "original": {
              "conceptURI": null,
              "dataType": Immutable.Record {
                "conceptURI": undefined,
                "display": "Date Time",
                "name": "dateTime",
                "rangeURI": "http://www.w3.org/2001/XMLSchema#dateTime",
                "alternateRangeURI": "xsd:dateTime",
                "shortDisplay": undefined,
                "lookupSchema": undefined,
                "lookupQuery": undefined,
              },
              "name": "DateField",
              "rangeURI": "http://www.w3.org/2001/XMLSchema#dateTime",
            },
            "updatedField": false,
            "isPrimaryKey": false,
            "lockType": "NotLocked",
            "wrappedColumnName": undefined,
            "disablePhiLevel": false,
            "lockExistingField": false,
            "sourceOntology": undefined,
            "conceptSubtree": undefined,
            "conceptLabelColumn": undefined,
            "conceptImportColumn": undefined,
            "principalConceptCode": undefined,
            "derivationDataScope": undefined,
            "selected": false,
            "scannable": false,
          },
        ],
        "indices": Immutable.List [],
        "domainException": undefined,
        "mandatoryFieldNames": Immutable.List [],
        "reservedFieldNames": Immutable.List [],
        "newDesignFields": undefined,
        "instructions": null,
        "domainKindName": undefined,
        "schemaName": null,
        "queryName": null,
        "disabledSystemFields": undefined,
      },
    ]
  }
  hasValidProperties={true}
  name="test1"
  onCancel={[MockFunction]}
  onFinish={[Function]}
  saveBtnText="Save"
  submitting={false}
  visitedPanels={Immutable.List []}
>
  <ComponentWithDomainPropertiesPanelCollapse
    controlledCollapse={true}
    initCollapsed={false}
    model={
      DataClassModel {
        "category": "sources",
        "description": "with a description",
        "domain": Immutable.Record {
          "name": "test1",
          "container": "3E40EE5E-91B7-1036-BF18-F5B7057C168C",
          "description": null,
          "domainURI": "urn:lsid:labkey.com:DataClass.Folder-5398:test1",
          "domainId": 58021,
          "allowFileLinkProperties": false,
          "allowAttachmentProperties": true,
          "allowFlagProperties": true,
          "allowSampleSubjectProperties": true,
          "allowTextChoiceProperties": true,
          "allowTimepointProperties": false,
          "allowUserProperties": true,
          "showDefaultValueSettings": false,
          "defaultDefaultValueType": "FIXED_EDITABLE",
          "defaultValueOptions": Immutable.List [
            "FIXED_EDITABLE",
            "LAST_ENTERED",
          ],
          "fields": Immutable.List [
            Immutable.Record {
              "conceptURI": null,
              "conditionalFormats": Immutable.List [],
              "defaultScale": "LINEAR",
              "defaultValueType": null,
              "defaultValue": null,
              "defaultDisplayValue": "[none]",
              "description": null,
              "dimension": false,
              "excludeFromShifting": false,
              "format": null,
              "hidden": false,
              "importAliases": null,
              "label": null,
              "lookupContainer": undefined,
              "lookupQuery": undefined,
              "lookupSchema": undefined,
              "lookupValidator": undefined,
              "lookupIsValid": undefined,
              "measure": false,
              "mvEnabled": false,
              "name": "TextField",
              "PHI": "NotPHI",
              "propertyId": 518195,
              "propertyURI": "urn:lsid:labkey.com:DataClass.Folder-5398:test1#Field1",
              "propertyValidators": [
                {
                  "description": null,
                  "errorMessage": null,
                  "expression": "~lte=4000",
                  "name": "Text Length",
                  "new": true,
                  "properties": {},
                  "rowId": 261363,
                  "type": "Length",
                },
              ],
              "rangeValidators": Immutable.List [],
              "rangeURI": "http://www.w3.org/2001/XMLSchema#string",
              "regexValidators": Immutable.List [],
              "textChoiceValidator": undefined,
              "recommendedVariable": false,
              "required": true,
              "scale": 4000,
              "URL": null,
              "shownInDetailsView": true,
              "shownInInsertView": true,
              "shownInUpdateView": true,
              "visible": true,
              "dataType": Immutable.Record {
                "conceptURI": undefined,
                "display": "Text",
                "name": "string",
                "rangeURI": "http://www.w3.org/2001/XMLSchema#string",
                "alternateRangeURI": "xsd:string",
                "shortDisplay": "String",
                "lookupSchema": undefined,
                "lookupQuery": undefined,
              },
              "lookupQueryValue": undefined,
              "lookupType": Immutable.Record {
                "conceptURI": undefined,
                "display": "Lookup",
                "name": "lookup",
                "rangeURI": "http://www.w3.org/2001/XMLSchema#string",
                "alternateRangeURI": undefined,
                "shortDisplay": undefined,
                "lookupSchema": undefined,
                "lookupQuery": undefined,
              },
              "original": {
                "conceptURI": null,
                "dataType": Immutable.Record {
                  "conceptURI": undefined,
                  "display": "Text",
                  "name": "string",
                  "rangeURI": "http://www.w3.org/2001/XMLSchema#string",
                  "alternateRangeURI": "xsd:string",
                  "shortDisplay": "String",
                  "lookupSchema": undefined,
                  "lookupQuery": undefined,
                },
                "name": "TextField",
                "rangeURI": "http://www.w3.org/2001/XMLSchema#string",
              },
              "updatedField": false,
              "isPrimaryKey": false,
              "lockType": "NotLocked",
              "wrappedColumnName": undefined,
              "disablePhiLevel": false,
              "lockExistingField": false,
              "sourceOntology": undefined,
              "conceptSubtree": undefined,
              "conceptLabelColumn": undefined,
              "conceptImportColumn": undefined,
              "principalConceptCode": undefined,
              "derivationDataScope": undefined,
              "selected": false,
              "scannable": false,
            },
            Immutable.Record {
              "conceptURI": null,
              "conditionalFormats": Immutable.List [],
              "defaultScale": "LINEAR",
              "defaultValueType": "FIXED_EDITABLE",
              "defaultValue": null,
              "defaultDisplayValue": "[none]",
              "description": null,
              "dimension": false,
              "excludeFromShifting": false,
              "format": null,
              "hidden": false,
              "importAliases": null,
              "label": null,
              "lookupContainer": undefined,
              "lookupQuery": undefined,
              "lookupSchema": undefined,
              "lookupValidator": undefined,
              "lookupIsValid": undefined,
              "measure": true,
              "mvEnabled": false,
              "name": "IntField",
              "PHI": "NotPHI",
              "propertyId": 521044,
              "propertyURI": "urn:lsid:labkey.com:DataClass.Folder-5398:test1#IntField",
              "propertyValidators": [],
              "rangeValidators": Immutable.List [],
              "rangeURI": "http://www.w3.org/2001/XMLSchema#int",
              "regexValidators": Immutable.List [],
              "textChoiceValidator": undefined,
              "recommendedVariable": false,
              "required": false,
              "scale": 4000,
              "URL": null,
              "shownInDetailsView": true,
              "shownInInsertView": true,
              "shownInUpdateView": true,
              "visible": true,
              "dataType": Immutable.Record {
                "conceptURI": undefined,
                "display": "Integer",
                "name": "int",
                "rangeURI": "http://www.w3.org/2001/XMLSchema#int",
                "alternateRangeURI": "xsd:int",
                "shortDisplay": undefined,
                "lookupSchema": undefined,
                "lookupQuery": undefined,
              },
              "lookupQueryValue": undefined,
              "lookupType": Immutable.Record {
                "conceptURI": undefined,
                "display": "Lookup",
                "name": "lookup",
                "rangeURI": "http://www.w3.org/2001/XMLSchema#int",
                "alternateRangeURI": undefined,
                "shortDisplay": undefined,
                "lookupSchema": undefined,
                "lookupQuery": undefined,
              },
              "original": {
                "conceptURI": null,
                "dataType": Immutable.Record {
                  "conceptURI": undefined,
                  "display": "Integer",
                  "name": "int",
                  "rangeURI": "http://www.w3.org/2001/XMLSchema#int",
                  "alternateRangeURI": "xsd:int",
                  "shortDisplay": undefined,
                  "lookupSchema": undefined,
                  "lookupQuery": undefined,
                },
                "name": "IntField",
                "rangeURI": "http://www.w3.org/2001/XMLSchema#int",
              },
              "updatedField": false,
              "isPrimaryKey": false,
              "lockType": "NotLocked",
              "wrappedColumnName": undefined,
              "disablePhiLevel": false,
              "lockExistingField": false,
              "sourceOntology": undefined,
              "conceptSubtree": undefined,
              "conceptLabelColumn": undefined,
              "conceptImportColumn": undefined,
              "principalConceptCode": undefined,
              "derivationDataScope": undefined,
              "selected": false,
              "scannable": false,
            },
            Immutable.Record {
              "conceptURI": null,
              "conditionalFormats": Immutable.List [],
              "defaultScale": "LINEAR",
              "defaultValueType": "FIXED_EDITABLE",
              "defaultValue": null,
              "defaultDisplayValue": "[none]",
              "description": null,
              "dimension": false,
              "excludeFromShifting": false,
              "format": null,
              "hidden": false,
              "importAliases": null,
              "label": null,
              "lookupContainer": undefined,
              "lookupQuery": undefined,
              "lookupSchema": undefined,
              "lookupValidator": undefined,
              "lookupIsValid": undefined,
              "measure": false,
              "mvEnabled": false,
              "name": "DateField",
              "PHI": "NotPHI",
              "propertyId": 521045,
              "propertyURI": "urn:lsid:labkey.com:DataClass.Folder-5398:test1#DateField",
              "propertyValidators": [],
              "rangeValidators": Immutable.List [],
              "rangeURI": "http://www.w3.org/2001/XMLSchema#dateTime",
              "regexValidators": Immutable.List [],
              "textChoiceValidator": undefined,
              "recommendedVariable": false,
              "required": false,
              "scale": 4000,
              "URL": null,
              "shownInDetailsView": true,
              "shownInInsertView": true,
              "shownInUpdateView": true,
              "visible": true,
              "dataType": Immutable.Record {
                "conceptURI": undefined,
                "display": "Date Time",
                "name": "dateTime",
                "rangeURI": "http://www.w3.org/2001/XMLSchema#dateTime",
                "alternateRangeURI": "xsd:dateTime",
                "shortDisplay": undefined,
                "lookupSchema": undefined,
                "lookupQuery": undefined,
              },
              "lookupQueryValue": undefined,
              "lookupType": Immutable.Record {
                "conceptURI": undefined,
                "display": "Lookup",
                "name": "lookup",
                "rangeURI": "http://www.w3.org/2001/XMLSchema#dateTime",
                "alternateRangeURI": undefined,
                "shortDisplay": undefined,
                "lookupSchema": undefined,
                "lookupQuery": undefined,
              },
              "original": {
                "conceptURI": null,
                "dataType": Immutable.Record {
                  "conceptURI": undefined,
                  "display": "Date Time",
                  "name": "dateTime",
                  "rangeURI": "http://www.w3.org/2001/XMLSchema#dateTime",
                  "alternateRangeURI": "xsd:dateTime",
                  "shortDisplay": undefined,
                  "lookupSchema": undefined,
                  "lookupQuery": undefined,
                },
                "name": "DateField",
                "rangeURI": "http://www.w3.org/2001/XMLSchema#dateTime",
              },
              "updatedField": false,
              "isPrimaryKey": false,
              "lockType": "NotLocked",
              "wrappedColumnName": undefined,
              "disablePhiLevel": false,
              "lockExistingField": false,
              "sourceOntology": undefined,
              "conceptSubtree": undefined,
              "conceptLabelColumn": undefined,
              "conceptImportColumn": undefined,
              "principalConceptCode": undefined,
              "derivationDataScope": undefined,
              "selected": false,
              "scannable": false,
            },
          ],
          "indices": Immutable.List [],
          "domainException": undefined,
          "mandatoryFieldNames": Immutable.List [],
          "reservedFieldNames": Immutable.List [],
          "newDesignFields": undefined,
          "instructions": null,
          "domainKindName": undefined,
          "schemaName": null,
          "queryName": null,
          "disabledSystemFields": undefined,
        },
        "domainId": 0,
        "importAliases": Immutable.Map {},
        "lsid": "urn:lsid:labkey.com:DataClass.Folder-5398:test1",
        "name": "test1",
        "nameExpression": "Source-\${genId}",
        "rowId": 802,
        "sampleSet": 1085,
        "systemFields": [
          {
            "DataType": "Text",
            "Description": "Contains a short name for this data object",
            "Disableble": false,
            "Label": "Source ID",
            "Name": "Name",
            "Required": true,
          },
          {
            "DataType": "Text",
            "Description": "Contains a description for this data object",
            "Disableble": true,
            "Label": "Description",
            "Name": "Description",
            "Required": false,
          },
        ],
        Symbol(immer-draftable): true,
      }
    }
    namePreviewsLoading={false}
    nounPlural="Data Classes"
    nounSingular="Data Class"
    onAddParentAlias={[Function]}
    onChange={[Function]}
    onNameFieldHover={[Function]}
    onParentAliasChange={[Function]}
    onRemoveParentAlias={[Function]}
    onToggle={[Function]}
    panelStatus="COMPLETE"
    parentAliasHelpText="Column headings used during import to set a data class's parentage."
    updateDupeParentAliases={[Function]}
    validate={true}
  />
  <DomainForm
    api={
      {
        "fetchDomainDetails": [MockFunction],
        "fetchOntologies": [MockFunction],
        "getDataClassDetails": [MockFunction],
        "getDomainNamePreviews": [MockFunction],
        "getGenId": [MockFunction],
        "getMaxPhiLevel": [Function],
        "hasExistingDomainData": [MockFunction],
        "saveDomain": [MockFunction],
        "setGenId": [MockFunction],
        "validateDomainNameExpressions": [MockFunction],
      }
    }
    controlledCollapse={true}
    domain={
      Immutable.Record {
        "name": "test1",
        "container": "3E40EE5E-91B7-1036-BF18-F5B7057C168C",
        "description": null,
        "domainURI": "urn:lsid:labkey.com:DataClass.Folder-5398:test1",
        "domainId": 58021,
        "allowFileLinkProperties": false,
        "allowAttachmentProperties": true,
        "allowFlagProperties": true,
        "allowSampleSubjectProperties": true,
        "allowTextChoiceProperties": true,
        "allowTimepointProperties": false,
        "allowUserProperties": true,
        "showDefaultValueSettings": false,
        "defaultDefaultValueType": "FIXED_EDITABLE",
        "defaultValueOptions": Immutable.List [
          "FIXED_EDITABLE",
          "LAST_ENTERED",
        ],
        "fields": Immutable.List [
          Immutable.Record {
            "conceptURI": null,
            "conditionalFormats": Immutable.List [],
            "defaultScale": "LINEAR",
            "defaultValueType": null,
            "defaultValue": null,
            "defaultDisplayValue": "[none]",
            "description": null,
            "dimension": false,
            "excludeFromShifting": false,
            "format": null,
            "hidden": false,
            "importAliases": null,
            "label": null,
            "lookupContainer": undefined,
            "lookupQuery": undefined,
            "lookupSchema": undefined,
            "lookupValidator": undefined,
            "lookupIsValid": undefined,
            "measure": false,
            "mvEnabled": false,
            "name": "TextField",
            "PHI": "NotPHI",
            "propertyId": 518195,
            "propertyURI": "urn:lsid:labkey.com:DataClass.Folder-5398:test1#Field1",
            "propertyValidators": [
              {
                "description": null,
                "errorMessage": null,
                "expression": "~lte=4000",
                "name": "Text Length",
                "new": true,
                "properties": {},
                "rowId": 261363,
                "type": "Length",
              },
            ],
            "rangeValidators": Immutable.List [],
            "rangeURI": "http://www.w3.org/2001/XMLSchema#string",
            "regexValidators": Immutable.List [],
            "textChoiceValidator": undefined,
            "recommendedVariable": false,
            "required": true,
            "scale": 4000,
            "URL": null,
            "shownInDetailsView": true,
            "shownInInsertView": true,
            "shownInUpdateView": true,
            "visible": true,
            "dataType": Immutable.Record {
              "conceptURI": undefined,
              "display": "Text",
              "name": "string",
              "rangeURI": "http://www.w3.org/2001/XMLSchema#string",
              "alternateRangeURI": "xsd:string",
              "shortDisplay": "String",
              "lookupSchema": undefined,
              "lookupQuery": undefined,
            },
            "lookupQueryValue": undefined,
            "lookupType": Immutable.Record {
              "conceptURI": undefined,
              "display": "Lookup",
              "name": "lookup",
              "rangeURI": "http://www.w3.org/2001/XMLSchema#string",
              "alternateRangeURI": undefined,
              "shortDisplay": undefined,
              "lookupSchema": undefined,
              "lookupQuery": undefined,
            },
            "original": {
              "conceptURI": null,
              "dataType": Immutable.Record {
                "conceptURI": undefined,
                "display": "Text",
                "name": "string",
                "rangeURI": "http://www.w3.org/2001/XMLSchema#string",
                "alternateRangeURI": "xsd:string",
                "shortDisplay": "String",
                "lookupSchema": undefined,
                "lookupQuery": undefined,
              },
              "name": "TextField",
              "rangeURI": "http://www.w3.org/2001/XMLSchema#string",
            },
            "updatedField": false,
            "isPrimaryKey": false,
            "lockType": "NotLocked",
            "wrappedColumnName": undefined,
            "disablePhiLevel": false,
            "lockExistingField": false,
            "sourceOntology": undefined,
            "conceptSubtree": undefined,
            "conceptLabelColumn": undefined,
            "conceptImportColumn": undefined,
            "principalConceptCode": undefined,
            "derivationDataScope": undefined,
            "selected": false,
            "scannable": false,
          },
          Immutable.Record {
            "conceptURI": null,
            "conditionalFormats": Immutable.List [],
            "defaultScale": "LINEAR",
            "defaultValueType": "FIXED_EDITABLE",
            "defaultValue": null,
            "defaultDisplayValue": "[none]",
            "description": null,
            "dimension": false,
            "excludeFromShifting": false,
            "format": null,
            "hidden": false,
            "importAliases": null,
            "label": null,
            "lookupContainer": undefined,
            "lookupQuery": undefined,
            "lookupSchema": undefined,
            "lookupValidator": undefined,
            "lookupIsValid": undefined,
            "measure": true,
            "mvEnabled": false,
            "name": "IntField",
            "PHI": "NotPHI",
            "propertyId": 521044,
            "propertyURI": "urn:lsid:labkey.com:DataClass.Folder-5398:test1#IntField",
            "propertyValidators": [],
            "rangeValidators": Immutable.List [],
            "rangeURI": "http://www.w3.org/2001/XMLSchema#int",
            "regexValidators": Immutable.List [],
            "textChoiceValidator": undefined,
            "recommendedVariable": false,
            "required": false,
            "scale": 4000,
            "URL": null,
            "shownInDetailsView": true,
            "shownInInsertView": true,
            "shownInUpdateView": true,
            "visible": true,
            "dataType": Immutable.Record {
              "conceptURI": undefined,
              "display": "Integer",
              "name": "int",
              "rangeURI": "http://www.w3.org/2001/XMLSchema#int",
              "alternateRangeURI": "xsd:int",
              "shortDisplay": undefined,
              "lookupSchema": undefined,
              "lookupQuery": undefined,
            },
            "lookupQueryValue": undefined,
            "lookupType": Immutable.Record {
              "conceptURI": undefined,
              "display": "Lookup",
              "name": "lookup",
              "rangeURI": "http://www.w3.org/2001/XMLSchema#int",
              "alternateRangeURI": undefined,
              "shortDisplay": undefined,
              "lookupSchema": undefined,
              "lookupQuery": undefined,
            },
            "original": {
              "conceptURI": null,
              "dataType": Immutable.Record {
                "conceptURI": undefined,
                "display": "Integer",
                "name": "int",
                "rangeURI": "http://www.w3.org/2001/XMLSchema#int",
                "alternateRangeURI": "xsd:int",
                "shortDisplay": undefined,
                "lookupSchema": undefined,
                "lookupQuery": undefined,
              },
              "name": "IntField",
              "rangeURI": "http://www.w3.org/2001/XMLSchema#int",
            },
            "updatedField": false,
            "isPrimaryKey": false,
            "lockType": "NotLocked",
            "wrappedColumnName": undefined,
            "disablePhiLevel": false,
            "lockExistingField": false,
            "sourceOntology": undefined,
            "conceptSubtree": undefined,
            "conceptLabelColumn": undefined,
            "conceptImportColumn": undefined,
            "principalConceptCode": undefined,
            "derivationDataScope": undefined,
            "selected": false,
            "scannable": false,
          },
          Immutable.Record {
            "conceptURI": null,
            "conditionalFormats": Immutable.List [],
            "defaultScale": "LINEAR",
            "defaultValueType": "FIXED_EDITABLE",
            "defaultValue": null,
            "defaultDisplayValue": "[none]",
            "description": null,
            "dimension": false,
            "excludeFromShifting": false,
            "format": null,
            "hidden": false,
            "importAliases": null,
            "label": null,
            "lookupContainer": undefined,
            "lookupQuery": undefined,
            "lookupSchema": undefined,
            "lookupValidator": undefined,
            "lookupIsValid": undefined,
            "measure": false,
            "mvEnabled": false,
            "name": "DateField",
            "PHI": "NotPHI",
            "propertyId": 521045,
            "propertyURI": "urn:lsid:labkey.com:DataClass.Folder-5398:test1#DateField",
            "propertyValidators": [],
            "rangeValidators": Immutable.List [],
            "rangeURI": "http://www.w3.org/2001/XMLSchema#dateTime",
            "regexValidators": Immutable.List [],
            "textChoiceValidator": undefined,
            "recommendedVariable": false,
            "required": false,
            "scale": 4000,
            "URL": null,
            "shownInDetailsView": true,
            "shownInInsertView": true,
            "shownInUpdateView": true,
            "visible": true,
            "dataType": Immutable.Record {
              "conceptURI": undefined,
              "display": "Date Time",
              "name": "dateTime",
              "rangeURI": "http://www.w3.org/2001/XMLSchema#dateTime",
              "alternateRangeURI": "xsd:dateTime",
              "shortDisplay": undefined,
              "lookupSchema": undefined,
              "lookupQuery": undefined,
            },
            "lookupQueryValue": undefined,
            "lookupType": Immutable.Record {
              "conceptURI": undefined,
              "display": "Lookup",
              "name": "lookup",
              "rangeURI": "http://www.w3.org/2001/XMLSchema#dateTime",
              "alternateRangeURI": undefined,
              "shortDisplay": undefined,
              "lookupSchema": undefined,
              "lookupQuery": undefined,
            },
            "original": {
              "conceptURI": null,
              "dataType": Immutable.Record {
                "conceptURI": undefined,
                "display": "Date Time",
                "name": "dateTime",
                "rangeURI": "http://www.w3.org/2001/XMLSchema#dateTime",
                "alternateRangeURI": "xsd:dateTime",
                "shortDisplay": undefined,
                "lookupSchema": undefined,
                "lookupQuery": undefined,
              },
              "name": "DateField",
              "rangeURI": "http://www.w3.org/2001/XMLSchema#dateTime",
            },
            "updatedField": false,
            "isPrimaryKey": false,
            "lockType": "NotLocked",
            "wrappedColumnName": undefined,
            "disablePhiLevel": false,
            "lockExistingField": false,
            "sourceOntology": undefined,
            "conceptSubtree": undefined,
            "conceptLabelColumn": undefined,
            "conceptImportColumn": undefined,
            "principalConceptCode": undefined,
            "derivationDataScope": undefined,
            "selected": false,
            "scannable": false,
          },
        ],
        "indices": Immutable.List [],
        "domainException": undefined,
        "mandatoryFieldNames": Immutable.List [],
        "reservedFieldNames": Immutable.List [],
        "newDesignFields": undefined,
        "instructions": null,
        "domainKindName": undefined,
        "schemaName": null,
        "queryName": null,
        "disabledSystemFields": undefined,
      }
    }
    domainFormDisplayOptions={
      {
        "disableMvEnabled": false,
        "domainKindDisplayName": "data class",
        "hideAddFieldsButton": false,
        "hideConditionalFormatting": false,
        "hideFilePropertyType": false,
        "hideImportData": false,
        "hideImportExport": false,
        "hideRequired": false,
        "hideStudyPropertyTypes": false,
        "hideTextOptions": false,
        "hideValidators": false,
        "isDragDisabled": false,
        "phiLevelDisabled": false,
      }
    }
    domainIndex={0}
    headerTitle="Fields"
    helpTopic={null}
    initCollapsed={true}
    key="58021"
    onChange={[Function]}
    onToggle={[Function]}
    panelStatus="COMPLETE"
    systemFields={
      [
        {
          "DataType": "Text",
          "Description": "Contains a short name for this data object",
          "Disableble": false,
          "Label": "Source ID",
          "Name": "Name",
          "Required": true,
        },
        {
          "DataType": "Text",
          "Description": "Contains a description for this data object",
          "Disableble": true,
          "Label": "Description",
          "Name": "Description",
          "Required": false,
        },
      ]
    }
    testMode={true}
    validate={false}
  />
  <NameExpressionValidationModal
    onConfirm={[Function]}
    onHide={[Function]}
    show={false}
  />
</BaseDomainDesigner>
`;
